--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "graphql-express-mongo-project-management",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -10,12 +18,6 @@
   "devDependencies": {
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.16"
-  },
-  "name": "graphql-express-mongo-project-management",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
